--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -121,12 +121,10 @@
                     <h3>Kyle Wagner</h3>
                     <h4>VP of Operations</h4>
                     <div class='text-content'>
-                        <p>Kyle is an experienced and connected leader in the technology services industry, with more than 20 years of business experience ranging from transforming the customer experience for companies through IT and Customer Support to building and leading high performing organizations that change the way companies engage and support their customers and partners.</p> 
+                        <p>Kyle Wagner is an innovative business and technology leader with more than 20 years of experience focused on transforming the customer experience through people, process and technology.  With a background in IT operations, data analytics, process engineering and software development, Kyle brings a track record of success that spans a broad set of business areas including customer support, information technology, application development and data management with an emphasis on the cloud and online services space.</p>
 
                         <div class='read-more'>
-                        <p>Kyle joined Blueprint as the VP of Operations after a distinguished career at Microsoft, where he served in key roles ranging from IT Business Unit Director to Customer Support Director to Customer Partner Experience Director, with a focus on cloud services.</p>
-                        <p>Kyle has a track record of solving complex business problems through a focus on people, process, and technology, using tools such as: ITIL-based frameworks, Six Sigma-based process improvement, support models, business tool development and company-wide frameworks, automation, and real-time dashboards.
-                        </p>
+                        <p>Kyle brings a passion for innovation and building high performance teams geared toward improving the way companies operate and engage with their customers and partners.  Kyle has substantial experience building data strategies and dashboard solutions that provide new business insight that enables companies to have their finger on the pulse of the customer and drive real-time management of their business.</p>
                         </div>
 
                         <button class='read-more-btn btn btn-link'>Read More</button>
