--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -123,7 +123,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class='col-md-6 col-md-offset-3'>
-                    <h1>Let us show you the proof</h1>
+                    <h1>Want to see proof?</h1>
                     <button onClick="location.href='work.html'" class="btn btn-primary btn-block btn-callToAction">See our solutions</button>
                 </div>
             </div>
