--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -121,10 +121,10 @@
                     <h3>Kyle Wagner</h3>
                     <h4>VP of Operations</h4>
                     <div class='text-content'>
-                        <p>Kyle Wagner is an innovative business and technology leader with more than 20 years of experience focused on transforming the customer experience through people, process and technology.  With a background in IT operations, data analytics, process engineering and software development, Kyle brings a track record of success that spans a broad set of business areas including customer support, information technology, application development and data management with an emphasis on the cloud and online services space.</p>
+                        <p>Kyle Wagner is an authentic business and technology leader with more than 20 years of experience focused on improving the way companies operate and engage their customers and partners. With a background in IT operations, data analytics, customer support, process engineering and software development, Kyle brings a unique and broad perspective to solving complex business challenges.</p>
 
                         <div class='read-more'>
-                        <p>Kyle brings a passion for innovation and building high performance teams geared toward improving the way companies operate and engage with their customers and partners.  Kyle has substantial experience building data strategies and dashboard solutions that provide new business insight that enables companies to have their finger on the pulse of the customer and drive real-time management of their business.</p>
+                        <p>Kyle brings a passion for innovation, building high performance teams and developing people. Kyle has substantial experience and a track record of success building data strategies and cutting edge dashboard solutions that provide new business insight and enable companies to act proactively and manage their business and customers in real-time.</p>
                         </div>
 
                         <button class='read-more-btn btn btn-link'>Read More</button>
