--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -191,7 +191,7 @@
               <div class="media-body">
 
                 <h4 class="media-heading">Life at Blueprint</h4>
-                The culture at Blueprint is one of collaboration, transparency and innovation.
+                <p>At Blueprint Consulting we work hard and we play hard.  Even when it is time to celebrate like at our quarterly wine tasting event – we still did a little work competing in our Innovation Cup for cash prizes.  See what it looks like to enjoy where you work this much.</p>
               </div>
             </div>
         </div>
