--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -33,9 +33,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">
-                    <img src="assets/img/bpcs-logo-white.png" alt="" class="img-responsive" />
-                </a>
+                <a class="navbar-brand" href="#"></a>
             </div>
             <div class="navbar-collapse collapse navbar-right scroll-me">
                 <ul class="nav navbar-nav ">
@@ -51,7 +49,7 @@
     <div id="home" class='hero-control'>
         <div class="container">
             <div class="col-md-8 col-md-offset-2 text-center">
-                <h1>IDEAS</h1>
+                <img src="assets/img/bpcs-logo-white.png" alt="" class="img-responsive img-hero-branding" />
                 <h2>Superior Execution, Every Time</h2>
                 <p class="p-cls"></p>
                 <div class="row text-center">
