--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -54,7 +54,7 @@
             <!-- overylay class usage -->
             <div class="container">
                 <div class="col-md-8 col-md-offset-2 text-center">
-                    <h1>THE TEAM
+                    <h1>THE TEAM</h1>
                     <h2>Positive, Accountable & Creative</h2>
                     <p class="p-cls"></p>
                     <div class="row text-center">
