--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -89,7 +89,7 @@
             <div class="col-md-4">
                 <div class='team-box'>
                     <div class='col-md-6'>
-                    <img src="http://bpcs.com/img/ryan_pic.jpg" alt="" class="img-responsive img-circle" />
+                    <img src="assets/img/ryan_pic.jpg" alt="" class="img-responsive img-circle" />
                     </div>
                     <h3>Ryan Neal</h3>
                     <h4>President</h4>
