--- a/bpcs-v4/connect.html
+++ b/bpcs-v4/connect.html
@@ -197,7 +197,7 @@
     </div>
     <!-- NAVBAR CODE END -->
     <!--HOME SECTION END  -->
-    <div id="connect" class='hero-control'>
+    <div id="connect" class='hero-control hero-control-scroll'>
         <div class="overlay">
             <!-- overylay class usage -->
             <div class="container">
