--- a/bpcs-v4/work.html
+++ b/bpcs-v4/work.html
@@ -49,7 +49,7 @@
     </div>
     <!-- NAVBAR CODE END -->
     <!--HOME SECTION END  -->
-    <div id="solutions" class='hero-control'>
+    <div id="solutions" class='hero-control hero-control-scroll'>
         <div class="overlay">
             <!-- overylay class usage -->
             <div class="container">
