--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -14,7 +14,7 @@
     <!-- BOOTSTRAP STYLE SHEET -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
     <!-- FONT AWESOME ICONS STYLE SHEET -->
-    <link href="assets/css/font-awesome.css" rel="stylesheet" />
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <!-- CUSTOM STYLES -->
     <link href="assets/css/style.css" rel="stylesheet" />
     <!-- HTML5 Shiv and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -72,20 +72,22 @@
                 <h2>FEATURED EXAMPLES <a href='work.html'><small>View All</small></a></h2>
             </div>
             <div class="row">
-                <div class="col-md-6 case-study">
-                    <a href='case_studies/1.pdf' target='blank'>
-                        <h3>Designing A Highly Scalable Global Launch Model</h3>
-                        <h4>Strategic Planning & Roadmapping</h4>
-                        <p>A digital entertainment giant needed to scale its customer service launch capabilities to allow up to 50 product launches and updates every quarter. Our global launch model enabled that scalability while keeping the team size to under three people.</p>
-                        <div class='read-more'> Read More <i class="fa fa-arrow-right fa-fw"></i></div>
+                <div class="col-md-6">
+                    <div class='case-study'>
+                    <a href='case_studies/A%20Scalable%20Sustainable%20Launch%20Model%20Improves%20Customer%20Experience.pdf' target='blank'>
+                    <h3>A Scalable Sustainable Launch Model Improves Customer Experience</h3>
+                    <p>Our client’s portfolio of five digital products – and no consistent or predictable launch schedule – created chaos for the customer service and customer experience teams who were expected to support customers.</p>
+                    <div class='read-more'> Read More <i class="fa fa-arrow-right fa-fw"></i></div>
                     </a>
+                    </div>
                 </div>
-                <div class="col-md-6 case-study">
-                    <a href='case_studies/2.pdf' target='blank'>
-                        <h3>Creating A Powerful Voice of Customer Scorecard</h3>
-                        <h4>Metrics</h4>
-                        <p>A Global 500 digital entertainment client was struggling to find and fix issues that were causing high levels of customer churn. Our uniquely designed voice of the viewer scorecard created insight around highly frustrating issues, and drove accountability for getting those issues fixed.</p>
-                        <div class='read-more'>Read More <i class="fa fa-arrow-right fa-fw"></i></div>
+                <div class="col-md-6">
+                    <div class='case-study'>
+                    <a href='case_studies/Chat%20and%20Social%20-%20Designing%20World%20Class%20Customer%20Service%20Channel%20Strategy.pdf' target='blank'>
+                    <h3>Chat and Social - Designing World Class Customer Service Channel Strategy</h3>
+                    <p>Struggling to improve their customer experience, our client needed a fresh take on customer interactions, and we developed technology, processes and analytics to create a world-class customer experience.</p>
+                    <div class='read-more'>Read More <i class="fa fa-arrow-right fa-fw"></i></div>
+                    </div>
                     </a>
                 </div>
             </div>
