--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -69,7 +69,7 @@
     <section id="portfolio" class='container-alt-gray'>
         <div class="container">
             <div class="row">
-                <h2>FEATURED EXAMPLES <a href='work.html'><small>View All</small></a></h2>
+                <h2>FEATURED EXAMPLES <a href='work.html#portfolio'><small>View All</small></a></h2>
             </div>
             <div class="row">
                 <div class="col-md-6">
