--- a/bpcs-v4/connect.html
+++ b/bpcs-v4/connect.html
@@ -462,6 +462,7 @@
     <script src="assets/js/jquery.easing.min.js"></script>
     <!-- CUSTOM SCRIPTS   -->
     <script src="assets/js/custom.js"></script>
+    <script src="assets/js/payboard.js"></script>
 </body>
 
 </html>
