--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -295,6 +295,7 @@
     <script src="assets/js/jquery.easing.min.js"></script>
     <!-- CUSTOM SCRIPTS   -->
     <script src="assets/js/custom.js"></script>
+    <script src="assets/js/payboard.js"></script>
 </body>
 
 </html>
