--- a/bpcs-v4/connect.html
+++ b/bpcs-v4/connect.html
@@ -203,8 +203,10 @@
             <!-- overylay class usage -->
             <div class="container">
                 <div class="col-md-8 col-md-offset-2 text-center">
+                    <div class='hero-box'>
                     <h1>CONNECT</h1>
                     <h2>We Are Here For You</h2>
+                    </div>
                     <p class="p-cls"></p>
                     <div class="row text-center">
                         <div class='arrow bounce'></div>
