--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -50,10 +50,15 @@
     </div>
     <!-- NAVBAR CODE END -->
     <div id="home" class='hero-control'>
-        <div class="container">
+        <div class="overlay">
+            <div class="container">
+            
             <div class="col-md-8 col-md-offset-2 text-center">
+                <div class='hero-box'>
                 <h1>BLUEPRINT</h1>
                 <h2>Superior Execution, Every Time</h2>
+                </div>
+               
                 <p class="p-cls"></p>
                 <div class="row text-center">
                     <div class='col-md-6 col-md-offset-3'>
@@ -62,6 +67,7 @@
                     <div class='arrow bounce'>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
     </div>
