--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -55,8 +55,10 @@
             <!-- overylay class usage -->
             <div class="container">
                 <div class="col-md-8 col-md-offset-2 text-center">
+                    <div class='hero-box'>
                     <h1>THE TEAM</h1>
                     <h2>Positive, Accountable & Creative</h2>
+                    </div>
                     <p class="p-cls"></p>
                     <div class="row text-center">
                         <div class='arrow bounce'></div>
