--- a/gd-content/368_ubuntu.html
+++ b/gd-content/368_ubuntu.html
@@ -3,7 +3,8 @@
 <head></head>
 
 <body>
-    Description here with no html content code.
+    Installing Jenkins on Ubuntu 14.04.1 LTS.
+
     <h1>How To Install Jenkins on Ubuntu 14.04.1 LTS</h1>
     <!-- START: GD provided 
     Time value is the time it takes to complete with accommodation for reading article itself (appropriate options are 5, 10, 15, 20, 30, 45 minutes, or 1, 2, or 3 hours). Timeframes only need to include steps outlined in the article itself; do not include timeframes for articles linked to.
@@ -13,7 +14,7 @@
         <br/>
         <strong>Time</strong>: 10 minutes</p>
     <!-- END: GD provided -->
-    <p>In this article, you will learn how to install Jenkins on a GoDaddy Cloud Server running Ubuntu 14.04.1 LTS. Jenkins is an application often used for continuous integration pipelines, allowing for the management and monitoring of project build jobs.</p>
+    <p>In this article, you will learn how to install Jenkins on a COMPANY_NAME Cloud Server running Ubuntu 14.04.1 LTS. Jenkins is an application often used for continuous integration pipelines, allowing for the management and monitoring of project build jobs.</p>
     <!-- Sections start with h2 -->
     <h2>Installation</h2>
     <p>The following steps assume you have root access and have terminal access. All commands can be ran via SSH.</p>
@@ -39,12 +40,12 @@
             <code>apt-get install jenkins</code>
         </li>
     </ol>
-    <p>Assuming your GoDaddy Cloud Server is publicly accessible at bpcs.testserver.com, if you open bpcs.testserver.com:8080 in a web browser, the Jenkins homepage should display</p>
+    <p>Assuming your COMPANY_NAME Cloud Server is publicly accessible at bpcs.testserver.com, if you open bpcs.testserver.com:8080 in a web browser, the Jenkins homepage should display</p>
     <p>
         <img src='/368/060915/jenkins-success.png' alt="Jenkins successful installation" />
     </p>
     <h2>Conclusion</h2>
-    <p>In this article, you have installed a fully functional instance of Jenkins on your GoDaddy Cloud Server. For information about adding a new job in Jenkins, check out <a href='#'>Adding A New Job In Jenkins</a>. For general information about Jenkins, visit the main Jenkins website at <a href='https://jenkins-ci.org/'>https://jenkins-ci.org</a>.
+    <p>In this article, you have installed a fully functional instance of Jenkins on your COMPANY_NAME Cloud Server. For information about adding a new job in Jenkins, check out <a href='#'>Adding A New Job In Jenkins</a>. For general information about Jenkins, visit the main Jenkins website at <a href='https://jenkins-ci.org/'>https://jenkins-ci.org</a>.
     </p>
     <!-- START: GD provided -->
     <p>Have questions? Email us at <a href='mailto:clouddocs@godaddy.com'>clouddocs@godaddy.com</a> or leave a comment.</p>
