--- a/gd-content/368_ubuntu.html
+++ b/gd-content/368_ubuntu.html
@@ -1,9 +1,11 @@
 <html>
 
-<head></head>
+<head>
+    <meta name='description' content='Installing Jenkins on Ubuntu 14.04.1 LTS.'>
+</head>
 
 <body>
-    Installing Jenkins on Ubuntu 14.04.1 LTS.
+    
 
     <h1>How To Install Jenkins on Ubuntu 14.04.1 LTS</h1>
     <!-- START: GD provided 
@@ -42,7 +44,7 @@
     </ol>
     <p>Assuming your COMPANY_NAME Cloud Server is publicly accessible at bpcs.testserver.com, if you open bpcs.testserver.com:8080 in a web browser, the Jenkins homepage should display</p>
     <p>
-        <img src='/368/060915/jenkins-success.png' alt="Jenkins successful installation" />
+        <img src='368/060915/jenkins-success.png' alt="Jenkins successful installation" />
     </p>
     <h2>Conclusion</h2>
     <p>In this article, you have installed a fully functional instance of Jenkins on your COMPANY_NAME Cloud Server. For information about adding a new job in Jenkins, check out <a href='#'>Adding A New Job In Jenkins</a>. For general information about Jenkins, visit the main Jenkins website at <a href='https://jenkins-ci.org/'>https://jenkins-ci.org</a>.
