--- a/bpcs-v4/work.html
+++ b/bpcs-v4/work.html
@@ -194,6 +194,8 @@
                         <li><img src='assets/img/client_logos/milliman-logo.png'></li>
                         <li><img src='assets/img/client_logos/popcap-logo.png'></li>
                         <li><img src='assets/img/client_logos/provident-logo.png'></li>
+                        <li><img src='assets/img/client_logos/godaddy-logo.png'></li>
+                        <li><img src='assets/img/client_logos/valve-logo.png'></li>
                     </ul>
                 </div>
             </div>
