--- a/bpcs-v4/work.html
+++ b/bpcs-v4/work.html
@@ -66,6 +66,7 @@
                 </div>
             </div>
         </div>
+    </div>
         <div class="sticky-wrapper">
             <nav class="subnav">
                 <div id="vertical-filter" class="status-container">
