--- a/bpcs-v4/work.html
+++ b/bpcs-v4/work.html
@@ -207,7 +207,18 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class='white-paper-entry'>
-                            <div class='col-md-3'><img class='img-responsive' src="assets/img/client_logos/eastside-business-award-logo.png" alt="..."></div>
+                            <div class='col-md-4'><img class='img-responsive' src="assets/img/client_logos/pugent-sound-business-logo.png" alt="..."></div>
+                            <div class='col-md-8'>
+                                <h4><small>2015</small></h4>
+                                <h4>Eastside Fastest-Growing Private Companies</h4>
+                                <p>Pugent Sounds Business Journal</p>
+                                <a href='http://www.bizjournals.com/seattle/blog/techflash/2015/06/eastsides-fastest-growing-revenue-soared-for-these.html#g9' target='blank'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class='white-paper-entry'>
+                            <div class='col-md-4'><img class='img-responsive' src="assets/img/client_logos/eastside-business-award-logo.png" alt="..."></div>
                             <div class='col-md-8'>
                                 <h4><small>2015</small></h4>
                                 <h4>Innovative Product or Service of the Year</h4>
@@ -227,6 +238,9 @@
                             </div>
                         </div>
                     </div>
+                    
+                </div>
+                <div class="row">
                     <div class="col-md-4">
                         <div class='white-paper-entry'>
                             <div class='col-md-4'><img class='img-responsive' src="assets/img/client_logos/eastside-fastest-growing-logo.png" alt="..."></div>
@@ -238,8 +252,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row">
                     <div class="col-md-4">
                         <div class='white-paper-entry'>
                             <div class='col-md-3'><img class='img-responsive' src="assets/img/client_logos/seattle-business-logo.png" alt="..."></div>
