--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -141,20 +141,77 @@
                 <div class="col-md-4">
                     <div class='team-box'>
                         <div class='col-md-6'>
-                            <img src="assets/img/jesse_pic.jpg" alt="" class="img-responsive img-circle" />
+                            <img src="assets/img/danielle_pic.jpg" alt="" class="img-responsive img-circle" />
                         </div>
-                        <h3>Jesse Perbix</h3>
-                        <h4>VP of Finance</h4>
+                        <h3>Danielle Funston</h3>
+                        <h4>VP of People</h4>
                         <div class='text-content'>
-                            <p>Jesse Perbix has over a decade in the consulting industry. From startups to multi-million dollar corporations, Mr. Perbix has experience with the full corporate spectrum. His passion lies in helping small to mid-sized companies succeed. Jesse believes that by nurturing the heart of a business, its people, you can achieve success. As CFO at Blueprint, Jesse focuses on financing, operations and human capital management.</p>
+                            <p>Danielle has several years of experience leading world-class service and support teams, with duties ranging from business development to employee management to marketing to reporting and process development. She has a proven record of successfully working closely with managers and executives to ensure that company goals are met.</p>
+                        <div class='read-more'>
+                                <p>In her free time, Danielle enjoys cooking, interior design, and spending time with her family.</p>
+                            </div>
+                            <button class='read-more-btn btn btn-link'>Read More</button>
                         </div>
                         <div class='links'>
                             <ul>
                                 <li>
-                                    <a href="https://www.linkedin.com/profile/view?id=16955555&authType=OUT_OF_NETWORK&authToken=VBVV&locale=en_US&srchid=2204932711409179239456&srchindex=1&srchtotal=107899&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A2204932711409179239456%2CVSRPtargetId%3A16955555%2CVSRPcmpt%3Aprimary"><i class="fa fa-linkedin fa-2x"></i> <span class="network-name"></span></a>
+                                    <a href="https://www.linkedin.com/profile/view?id=111799784&authType=NAME_SEARCH&authToken=9F5u&locale=en_US&trk=tyah2&trkInfo=tarId%3A1409177615865%2Ctas%3Adanielle%2Cidx%3A1-1-1"><i class="fa fa-linkedin fa-2x"></i> <span class="network-name"></span></a>
                                 </li>
                                 <li>
-                                    <a href="mailto:jesse@bpcs.com"><i class="fa fa-envelope fa-2x"></i> <span class="network-name"></span></a>
+                                    <a href="mailto:danielle@bpcs.com"><i class="fa fa-envelope fa-2x"></i> <span class="network-name"></span></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class='team-box'>
+                        <div class='col-md-6'>
+                            <img src="assets/img/ian_pic.jpg" alt="" class="img-responsive img-circle" />
+                        </div>
+                        <h3>Ian Hunt</h3>
+                        <h4>Managing Director</h4>
+                        <div class='text-content'>
+                            <p>Ian Hunt brings more than 20 years of experience as a customer support leader building global multi-tiered and multi-channel support solutions that optimize customer satisfaction. Ian is responsible for the management of our Customer Experience & Support Business and has a background in Service Management, Customer Experience Design, Technical support, Contact Center Solutions, and Operations.</p>
+                        <div class='read-more'>
+                                <p>Most recently Ian has led various divisions of Microsoft’s Global Customer Support Team with responsibilities for service availability and customer experience. He has both domestic and international management experience and a talent for making rapid assessments of diverse situational challenges, then developing and leading the resulting action plans. In his free time, Ian likes to travel, follows the English Premier League and in quieter times appreciates fine wine and a good book!</p>
+                            </div>
+                            <button class='read-more-btn btn btn-link'>Read More</button>
+                        </div>
+                        <div class='links'>
+                            <ul>
+                                <li>
+                                    <a href="https://www.linkedin.com/profile/view?id=219329295&authType=NAME_SEARCH&authToken=i8rr&locale=en_US&srchid=2204932711409177398002&srchindex=1&srchtotal=257&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A2204932711409177398002%2CVSRPtargetId%3A219329295%2CVSRPcmpt%3Aprimary"><i class="fa fa-linkedin fa-2x"></i> <span class="network-name"></span></a>
+                                </li>
+                                <li>
+                                    <a href="mailto:ian@bpcs.com"><i class="fa fa-envelope fa-2x"></i> <span class="network-name"></span></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class='team-box'>
+                        <div class='col-md-6'>
+                            <img src="assets/img/casey_pic.jpg" alt="" class="img-responsive img-circle" />
+                        </div>
+                        <h3>Casey Bayless</h3>
+                        <h4>Recruiting Manager</h4>
+                        <div class='text-content'>
+                            <p>Casey has more than ten years of management & recruiting experience supporting client groups in a Fortune 500 environment after earning a Bachelor of Arts in Accounting and Information Systems from Washington State University. He has expertise in working with geographically dispersed and operationally decentralized organizations and provides recruitment capability, strategic direction and recommended solutions for talent acquisition projects.</p>
+                        </div>
+                        <div class='links'>
+                            <ul>
+                                <li>
+                                    <a href="https://www.linkedin.com/profile/view?id=29151923&authType=NAME_SEARCH&authToken=Oynf&locale=en_US&srchid=2204932711409177780913&srchindex=1&srchtotal=1&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A2204932711409177780913%2CVSRPtargetId%3A29151923%2CVSRPcmpt%3Aprimary"><i class="fa fa-linkedin fa-2x"></i> <span class="network-name"></span></a>
+                                </li>
+                                <li>
+                                    <a href="https://twitter.com/caseybayless"><i class="fa fa-twitter fa-2x"></i> <span class="network-name"></span></a>
+                                </li>
+                                <li>
+                                    <a href="mailto:casey@bpcs.com"><i class="fa fa-envelope fa-2x"></i> <span class="network-name"></span></a>
                                 </li>
                             </ul>
                         </div>
@@ -179,6 +236,12 @@
                 <div class="media">
                     <div class="media-left">
                         <iframe id="vp1Jf5xq" title="Video Player" width="432" height="243" frameborder="0" src="https://s3.amazonaws.com/embed.animoto.com/play.html?w=swf/production/vp1&e=1431361707&f=Jf5xqpo4G7QOgAzCERFsgg&d=0&m=p&r=360p&volume=100&start_res=360p&i=m&asset_domain=s3-p.animoto.com&animoto_domain=animoto.com&options=" allowfullscreen></iframe>
+
+
+
+                        <video autoplay loop id="bgvid">
+                            <source src="https://www.youtube.com/watch?v=duKL2dAJN6I">
+                        </video>
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading">Life at Blueprint</h4>
