--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -141,7 +141,7 @@
                 <div class="col-md-4">
                     <div class='team-box'>
                         <div class='col-md-6'>
-                            <img src="assets/img/danielle_pic.jpg" alt="" class="img-responsive img-circle" />
+                            <img src="assets/img/danielle_pic.jpeg" alt="" class="img-responsive img-circle" />
                         </div>
                         <h3>Danielle Funston</h3>
                         <h4>VP of People</h4>
@@ -237,11 +237,6 @@
                     <div class="media-left">
                         <iframe id="vp1Jf5xq" title="Video Player" width="432" height="243" frameborder="0" src="https://s3.amazonaws.com/embed.animoto.com/play.html?w=swf/production/vp1&e=1431361707&f=Jf5xqpo4G7QOgAzCERFsgg&d=0&m=p&r=360p&volume=100&start_res=360p&i=m&asset_domain=s3-p.animoto.com&animoto_domain=animoto.com&options=" allowfullscreen></iframe>
 
-
-
-                        <video autoplay loop id="bgvid">
-                            <source src="https://www.youtube.com/watch?v=duKL2dAJN6I">
-                        </video>
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading">Life at Blueprint</h4>
