--- a/bpcs-v4/connect.html
+++ b/bpcs-v4/connect.html
@@ -387,11 +387,11 @@
     </section>
     <section id='locations' class='container-alt'>
         <div class="container">
-            <h2>LOCATION</h2>
+            <h2>LOCATIONS</h2>
             <div class='row'>
                 <div class='col-md-4 col-md-offset-3'>
                     <address>
-                        <strong>ADDRESS</strong>
+                        <strong>MAIN OFFICE ADDRESS</strong>
                         <br> 350 106th Ave NE, Second Floor
                         <br> Bellevue, WA 98004
                     </address>
