--- a/gd-content/template.html
+++ b/gd-content/template.html
@@ -1,6 +1,12 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
-<head></head>
+<head>
+    <title>Title Here</title>
+    <meta name='description' content='meta description' />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+</head>
 
 <body>
     Description here with no html content code.
@@ -19,7 +25,7 @@
 
     <!-- Sections start with h2 -->
     <h2>Set up a Python virtual environment</h2>
-    <p>To [do whatever the article is talking about], you'll need to <a href=”[link to article]”>set up a Python virtual environment</a>.</p>
+    <p>To [do whatever the article is talking about], you'll need to <a href=”http://www.godaddy.com”>set up a Python virtual environment</a>.</p>
     <h2>Commands</h2>
     <ol>
         <li>
