--- a/gd-content/template.html
+++ b/gd-content/template.html
@@ -25,7 +25,7 @@
 
     <!-- Sections start with h2 -->
     <h2>Set up a Python virtual environment</h2>
-    <p>To [do whatever the article is talking about], you'll need to <a href=”http://www.godaddy.com”>set up a Python virtual environment</a>.</p>
+    <p>To [do whatever the article is talking about], you'll need to <a href='http://www.godaddy.com'>set up a Python virtual environment</a>.</p>
     <h2>Commands</h2>
     <ol>
         <li>
