--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -56,8 +56,8 @@
             <div class="container">
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <div class='hero-box'>
-                    <h1>THE TEAM</h1>
-                    <h2>Positive, Accountable & Creative</h2>
+                        <h1>THE TEAM</h1>
+                        <h2>Positive, Accountable & Creative</h2>
                     </div>
                     <p class="p-cls"></p>
                     <div class="row text-center">
@@ -147,7 +147,7 @@
                         <h4>VP of People</h4>
                         <div class='text-content'>
                             <p>Danielle has several years of experience leading world-class service and support teams, with duties ranging from business development to employee management to marketing to reporting and process development. She has a proven record of successfully working closely with managers and executives to ensure that company goals are met.</p>
-                        <div class='read-more'>
+                            <div class='read-more'>
                                 <p>In her free time, Danielle enjoys cooking, interior design, and spending time with her family.</p>
                             </div>
                             <button class='read-more-btn btn btn-link'>Read More</button>
@@ -175,7 +175,7 @@
                         <h4>Managing Director</h4>
                         <div class='text-content'>
                             <p>Ian Hunt brings more than 20 years of experience as a customer support leader building global multi-tiered and multi-channel support solutions that optimize customer satisfaction. Ian is responsible for the management of our Customer Experience & Support Business and has a background in Service Management, Customer Experience Design, Technical support, Contact Center Solutions, and Operations.</p>
-                        <div class='read-more'>
+                            <div class='read-more'>
                                 <p>Most recently Ian has led various divisions of Microsoft’s Global Customer Support Team with responsibilities for service availability and customer experience. He has both domestic and international management experience and a talent for making rapid assessments of diverse situational challenges, then developing and leading the resulting action plans. In his free time, Ian likes to travel, follows the English Premier League and in quieter times appreciates fine wine and a good book!</p>
                             </div>
                             <button class='read-more-btn btn btn-link'>Read More</button>
@@ -221,29 +221,27 @@
         </div>
         </div>
     </section>
-    <section id="culture" class='container-alt'>
-        <div class="container">
-            <h2>CULTURE</h2>
-            <div class='col-md-4'>
-                <blockquote>
-                    <p>Blueprint has a fun and innovative culture with a focus on personal growth, Their benefits are top notch and competitive with large fortune 100 companies. A great place to work, learn and develop!</p>
-                    <footer>Current employee on
-                        <cite title="Source Title">Glass Door</cite>
-                    </footer>
-                </blockquote>
-            </div>
-            <div class='col-md-8'>
-                <div class="media">
-                    <div class="media-left">
-                        <iframe id="vp1Jf5xq" title="Video Player" width="432" height="243" frameborder="0" src="https://s3.amazonaws.com/embed.animoto.com/play.html?w=swf/production/vp1&e=1431361707&f=Jf5xqpo4G7QOgAzCERFsgg&d=0&m=p&r=360p&volume=100&start_res=360p&i=m&asset_domain=s3-p.animoto.com&animoto_domain=animoto.com&options=" allowfullscreen></iframe>
-
-                    </div>
-                    <div class="media-body">
-                        <h4 class="media-heading">Life at Blueprint</h4>
-                        <p>At Blueprint Consulting we work hard and we play hard. Even when it is time to celebrate like at our quarterly wine tasting event – we still did a little work competing in our Innovation Cup for cash prizes. See what it looks like to enjoy where you work this much.</p>
+    <section id="culture" class='container-alt no-padding'>
+        <div id='vid-close'>
+            <i class="fa fa-times-circle fa-4x"></i>
+        </div>
+        <div id="teamCulture" class='hero-control'>
+           
+            <!-- overylay class usage -->
+            <div class="container vid-container">
+                <div class="col-md-8 col-md-offset-2 text-center">
+                    <div class='hero-box hero-box-white'>
+                        <h1>CULTURE</h1>
+                        <h2>We love what we do and we play hard</h2>
+                        <div id='vid-play'>
+                            <i class="fa fa-play-circle fa-4x"></i>
+                        </div>
                     </div>
                 </div>
             </div>
+             <video loop id="bgvid" preload="none">
+                <source src="/assets/video/bpcs_q1_2015_quarterly_event2.mp4" type="video/mp4">
+            </video>
         </div>
     </section>
     <!-- CLIENTS SECTION END-->
@@ -336,6 +334,8 @@
                 <ul class='mine'>
                     <li><i class="fa fa-phone fa-fw"></i>206.455.8326</li>
                     <li><i class="fa fa-envelope-o fa-fw"></i><a href="work.html">info@bpcs.com</a></li>
+                    <li><i class="fa fa-map-marker fa-fw"></i>350 106th Ave NE
+                        <br>Bellevue, WA 98004</li>
                 </ul>
             </div>
         </div>
