--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -240,7 +240,7 @@
                 </div>
             </div>
              <video loop id="bgvid" preload="none">
-                <source src="/assets/video/bpcs_q1_2015_quarterly_event2.mp4" type="video/mp4">
+                <source src="http://bpcs.com/assets/video/bpcs_q1_2015_quarterly_event2.mp4" type="video/mp4">
             </video>
         </div>
     </section>
