--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -226,8 +226,8 @@
             <i class="fa fa-times-circle fa-4x"></i>
         </div>
         <div id="teamCulture" class='hero-control'>
-           
             <!-- overylay class usage -->
+            
             <div class="container vid-container">
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <div class='hero-box hero-box-white'>
@@ -239,7 +239,7 @@
                     </div>
                 </div>
             </div>
-             <video loop id="bgvid" preload="none">
+            <video autoplay muted loop id="bgvid" preload="auto">
                 <source src="http://bpcs.com/assets/video/bpcs_q1_2015_quarterly_event2.mp4" type="video/mp4">
             </video>
         </div>
