--- a/bpcs-v4/connect.html
+++ b/bpcs-v4/connect.html
@@ -219,9 +219,9 @@
         <nav class="subnav">
             <div id="vertical-filter" class="status-container">
                 <ul class="content">
-                    <li class="item"><a href="#socialmedia">SOCIAL MEDIA</a></li>
+                    <li class="item"><a href="#socialmedia">SOCIAL</a></li>
                     <li class="item"><a href="#blog">BLOG</a></li>
-                    <li class="item"><a href="#contact">CONTACT US</a></li>
+                    <li class="item"><a href="#contact">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
