--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -263,31 +263,31 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class='white-paper-entry'>
-                        <div class='col-md-3'><i class="fa fa-road  fa-4x"></i></div>
+                        <div class='col-md-3'><i class="fa fa-comments  fa-4x"></i></div>
                         <div class='col-md-8'>
-                            <h4>Infrastructure Engineer</h4>
-                            <p>Seattle, WA</p>
-                            <a href='https://jobs-bpcs.icims.com/jobs/1120/infrastructure-engineer/job?in_iframe=1'>View job <i class="fa fa-arrow-right fa-fw"></i></a>
+                            <h4>Messaging Engineer</h4>
+                            <p>Texas</p>
+                            <a href='https://jobs-bpcs.icims.com/jobs/1100/messaging-engineer---texas/job'>View job <i class="fa fa-arrow-right fa-fw"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class='white-paper-entry'>
-                        <div class='col-md-3'><i class="fa fa-flask  fa-4x"></i></div>
+                        <div class='col-md-3'><i class="fa fa-users  fa-4x"></i></div>
                         <div class='col-md-8'>
-                            <h4>Software Developer II</h4>
+                            <h4>Customer Relationship Manager</h4>
                             <p>Bellevue, WA</p>
-                            <a href='https://jobs-bpcs.icims.com/jobs/1122/software-developer-ii/job?in_iframe=1'>View job <i class="fa fa-arrow-right fa-fw"></i></a>
+                            <a href='https://jobs-bpcs.icims.com/jobs/1139/customer-relationship-manager/job'>View job <i class="fa fa-arrow-right fa-fw"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class='white-paper-entry'>
-                        <div class='col-md-3'><i class="fa fa-coffee  fa-4x"></i></div>
+                        <div class='col-md-3'><i class="fa fa-globe  fa-4x"></i></div>
                         <div class='col-md-8'>
-                            <h4>Java Engineer</h4>
-                            <p>Seattle, WA</p>
-                            <a href='https://jobs-bpcs.icims.com/jobs/1119/java-engineer/job?in_iframe=1'>View job <i class="fa fa-arrow-right fa-fw"></i></a>
+                            <h4>Migration Manager</h4>
+                            <p>North Carolina</p>
+                            <a href='https://jobs-bpcs.icims.com/jobs/1116/migration-manager---north-carolina/job'>View job <i class="fa fa-arrow-right fa-fw"></i></a>
                         </div>
                     </div>
                 </div>
