--- a/bpcs-v4/contact.html
+++ b/bpcs-v4/contact.html
@@ -139,7 +139,7 @@ $(function(){
  </td>
 </tr>
 <tr>
- <td valign="top"">
+ <td valign="top">
   <label for="last_name">Last Name *</label>
  </td>
  <td valign="top">
