--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -41,7 +41,7 @@
             <div class="navbar-collapse collapse navbar-right scroll-me">
                 <ul class="nav navbar-nav ">
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="work.html">SOLUTIONS</a></li>
+                    <li><a href="solutions.html">SOLUTIONS</a></li>
                     <li><a href="team.html">TEAM</a></li>
                     <li><a href="connect.html">CONNECT</a></li>
                 </ul>
@@ -62,7 +62,7 @@
                 <p class="p-cls"></p>
                 <div class="row text-center">
                     <div class='col-md-6 col-md-offset-3'>
-                        <button onClick="location.href='work.html'" class="btn btn-callToAction btn-block">See our solutions</button>
+                        <button onClick="location.href='solutions.html'" class="btn btn-callToAction btn-block">See our solutions</button>
                     </div>
                     <div class='arrow bounce'>
                     </div>
@@ -75,7 +75,7 @@
     <section id="portfolio" class='container-alt-gray'>
         <div class="container">
             <div class="row">
-                <h2>FEATURED EXAMPLES <a href='work.html#portfolio'><small>View All</small></a></h2>
+                <h2>FEATURED EXAMPLES <a href='solutions.html#portfolio'><small>View All</small></a></h2>
             </div>
             <div class="row">
                 <div class="col-md-6">
@@ -143,7 +143,7 @@
             <div class="row text-center">
                 <div class='col-md-6 col-md-offset-3'>
                     <h1>Want to see proof?</h1>
-                    <button onClick="location.href='work.html'" class="btn btn-primary btn-block btn-callToAction">See our solutions</button>
+                    <button onClick="location.href='solutions.html'" class="btn btn-primary btn-block btn-callToAction">See our solutions</button>
                 </div>
             </div>
         </div>
@@ -154,7 +154,7 @@
                 <h3>Site Navigation</h3>
                 <ul class='mine'>
                     <li><i class="fa fa-home fa-fw"></i><a href="index.html">Home</a></li>
-                    <li><i class="fa fa-pied-piper fa-fw"></i><a href="work.html">Solutions</a></li>
+                    <li><i class="fa fa-pied-piper fa-fw"></i><a href="solutions.html">Solutions</a></li>
                     <li><i class="fa fa-users fa-fw"></i><a href="team.html">Team</a></li>
                     <li><i class="fa fa-envelope fa-fw"></i><a href="connect.html">Connect</a></li>
                 </ul>
@@ -177,7 +177,7 @@
                 <h3>Contact Us</h3>
                 <ul class='mine'>
                     <li><i class="fa fa-phone fa-fw"></i>206.455.8326</li>
-                    <li><i class="fa fa-envelope-o fa-fw"></i><a href="work.html">info@bpcs.com</a></li>
+                    <li><i class="fa fa-envelope-o fa-fw"></i><a href="mailto:info@bpcs.com">info@bpcs.com</a></li>
                     <li><i class="fa fa-map-marker fa-fw"></i>350 106th Ave NE<br>Bellevue, WA 98004</li>
                 </ul>
             </div>
