--- a/bpcs-v4/solutions.html
+++ b/bpcs-v4/solutions.html
@@ -41,7 +41,7 @@
             <div class="navbar-collapse collapse navbar-right scroll-me">
                 <ul class="nav navbar-nav ">
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="work.html">SOLUTIONS</a></li>
+                    <li><a href="solutions.html">SOLUTIONS</a></li>
                     <li><a href="team.html">TEAM</a></li>
                     <li><a href="connect.html">CONNECT</a></li>
                 </ul>
@@ -86,7 +86,7 @@
                         <div class='share-link pull-right text-left'>
                             <div class='col-md-1'><i class="fa fa-share-alt fa-2x show-link"></i></div>
                             <div class='col-md-8 share-url'>
-                                <samp><b>SHARE URL:</b> http://www.bpcs.com/work.html#portfolio</samp>
+                                <samp><b>SHARE URL:</b> http://www.bpcs.com/solutions.html#portfolio</samp>
                             </div>
                         </div>
                     </div>
@@ -303,7 +303,7 @@
                     <h3>Site Navigation</h3>
                     <ul class='mine'>
                         <li><i class="fa fa-home fa-fw"></i><a href="index.html">Home</a></li>
-                        <li><i class="fa fa-pied-piper fa-fw"></i><a href="work.html">Solutions</a></li>
+                        <li><i class="fa fa-pied-piper fa-fw"></i><a href="solutions.html">Solutions</a></li>
                         <li><i class="fa fa-users fa-fw"></i><a href="team.html">Team</a></li>
                         <li><i class="fa fa-envelope fa-fw"></i><a href="connect.html">Connect</a></li>
                     </ul>
@@ -326,7 +326,7 @@
                     <h3>Contact Us</h3>
                     <ul class='mine'>
                         <li><i class="fa fa-phone fa-fw"></i>206.455.8326</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i><a href="work.html">info@bpcs.com</a></li>
+                        <li><i class="fa fa-envelope-o fa-fw"></i><a href="mailto:info@bpcs.com">info@bpcs.com</a></li>
                         <li><i class="fa fa-map-marker fa-fw"></i>350 106th Ave NE<br>Bellevue, WA 98004</li>
                     </ul>
                 </div>
