--- a/bpcs-v4/work.html
+++ b/bpcs-v4/work.html
@@ -43,7 +43,7 @@
             <div class="navbar-collapse collapse navbar-right scroll-me">
                 <ul class="nav navbar-nav ">
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="work.html">SOLUTIONS</a></li>
+                    <li><a href="solutions.html">SOLUTIONS</a></li>
                     <li><a href="team.html">TEAM</a></li>
                     <li><a href="connect.html">CONNECT</a></li>
                 </ul>
@@ -305,7 +305,7 @@
                     <h3>Site Navigation</h3>
                     <ul class='mine'>
                         <li><i class="fa fa-home fa-fw"></i><a href="index.html">Home</a></li>
-                        <li><i class="fa fa-pied-piper fa-fw"></i><a href="work.html">Solutions</a></li>
+                        <li><i class="fa fa-pied-piper fa-fw"></i><a href="solutions.html">Solutions</a></li>
                         <li><i class="fa fa-users fa-fw"></i><a href="team.html">Team</a></li>
                         <li><i class="fa fa-envelope fa-fw"></i><a href="connect.html">Connect</a></li>
                     </ul>
