--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -90,7 +90,7 @@
                 <div class="col-md-6">
                     <div class='case-study'>
                     <a href='case_studies/Chat%20and%20Social%20-%20Designing%20World%20Class%20Customer%20Service%20Channel%20Strategy.pdf' target='blank'>
-                    <h3>Chat and Social - Designing World Class Customer Service Channel Strategy</h3>
+                    <h3>Designing World Class Customer Service Channel Strategy</h3>
                     <p>Struggling to improve their customer experience, our client needed a fresh take on customer interactions, and we developed technology, processes and analytics to create a world-class customer experience.</p>
                     <div class='read-more'>Read More <i class="fa fa-arrow-right fa-fw"></i></div>
                     </div>
