--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -90,7 +90,7 @@
                             <img src="assets/img/ryan_pic.jpg" alt="" class="img-responsive img-circle" />
                         </div>
                         <h3>Ryan Neal</h3>
-                        <h4>President & Co-Founder</h4>
+                        <h4>President<br>& Co-Founder</h4>
                         <div class='text-content'>
                             <p>Ryan Neal is a talented investor, director, and advisor with more than ten years of experience in collaborating with the owners and managers of private companies to increase their value. With a focus and specialty in high-tech and custom manufacturing environments, Ryan brings a diverse skill set and the passion to affect long-lasting, strategic partnerships with companies and individuals.</p>
                             <div class='read-more'>
@@ -119,7 +119,7 @@
                             <img src="assets/img/kyle_pic.jpg" alt="" class="img-responsive img-circle" />
                         </div>
                         <h3>Kyle Wagner</h3>
-                        <h4>VP of Operations & Co-Founder</h4>
+                        <h4>VP of Operations<br>& Co-Founder</h4>
                         <div class='text-content'>
                             <p>Kyle Wagner is an authentic business and technology leader with more than 20 years of experience improving the way companies operate and engage with their customers and partners. With a background in IT operations, data analytics, customer support and software development, Kyle brings a unique and broad perspective to solving complex business challenges.</p>
                         </div>
