--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -169,6 +169,32 @@
                 <div class="col-md-4">
                     <div class='team-box'>
                         <div class='col-md-6'>
+                            <img src="assets/img/andy_pic.jpg" alt="" class="img-responsive img-circle" />
+                        </div>
+                        <h3>Andy Macourek</h3>
+                        <h4>Principal Technologist</h4>
+                        <div class='text-content'>
+                            <p>Andy Macourek has more than 20 years of experience designing, developing, and supporting enterprise-level applications and solutions for several companies. Andy has held the entire gambit of roles in the software lifecycle: tester, support engineer, support manager, project manager, lead developer, and architect. </p>
+                            <div class='read-more'>
+                                <p>His experience with application and solution development spans a myriad of customer areas and needs: worldwide licensing, workflow management, system monitoring, sales and marketing, technical certifications, real estate, and technical support. At Microsoft, Andy was the architect and lead developer for the Windows Live Solution Center and for Iridias. Andy holds a Bachelor of Science in Electrical Engineering from Washington State University. In his free time, Andy is an avid gamer, both on screen and tabletop, and enjoys painting tabletop miniatures.</p>
+                            </div>
+                            <button class='read-more-btn btn btn-link'>Read More</button>
+                        </div>
+                        <div class='links'>
+                            <ul>
+                                <li>
+                                    <a href="https://www.linkedin.com/profile/view?id=23791413&authType=OUT_OF_NETWORK&authToken=O1Jp&locale=en_US&srchid=2204932711409179473910&srchindex=2&srchtotal=913527&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A2204932711409179473910%2CVSRPtargetId%3A23791413%2CVSRPcmpt%3Aprimary"><i class="fa fa-linkedin fa-2x"></i> <span class="network-name"></span></a>
+                                </li>
+                                <li>
+                                    <a href="mailto:andy@bpcs.com"><i class="fa fa-envelope fa-2x"></i> <span class="network-name"></span></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class='team-box'>
+                        <div class='col-md-6'>
                             <img src="assets/img/ian_pic.jpg" alt="" class="img-responsive img-circle" />
                         </div>
                         <h3>Ian Hunt</h3>
