--- a/bpcs-v4/solutions.html
+++ b/bpcs-v4/solutions.html
@@ -207,7 +207,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class='white-paper-entry'>
-                            <div class='col-md-3'><img class='img-responsive' src="assets/img/client_logos/seattle-business-logo.png" alt="..."></div>
+                            <div class='col-md-3'><img class='img-responsive' src="assets/img/bestco_sq.jpg" alt="..."></div>
                             <div class='col-md-8'>
                                 <h4><small>2015</small></h4>
                                 <h4>Top 100 Best Companies To Work For</h4>
@@ -218,7 +218,8 @@
                     </div>
                     <div class="col-md-4">
                         <div class='white-paper-entry'>
-                            <div class='col-md-4'><img class='img-responsive' src="assets/img/client_logos/pugent-sound-business-logo.png" alt="..."></div>
+                            <div class='col-md-4'><img class='img-responsive' src="assets/img/client_logos/eastside-fastest-growing-logo.png" alt="...">
+                            <img class='img-responsive' src="assets/img/winner.png" alt="..."></div>
                             <div class='col-md-8'>
                                 <h4><small>2015</small></h4>
                                 <h4>Eastside Fastest-Growing Private Companies</h4>
@@ -244,7 +245,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class='white-paper-entry'>
-                            <div class='col-md-3'><img class='img-responsive' src="assets/img/client_logos/seattle-business-logo.png" alt="..."></div>
+                            <div class='col-md-3'><img class='img-responsive' src="assets/img/bestco_sq.jpg" alt="..."></div>
                             <div class='col-md-8'>
                                 <h4><small>2014</small></h4>
                                 <h4>Top 100 Best Companies To Work For</h4>
@@ -253,29 +254,29 @@
                             </div>
                         </div>
                     </div>
-
-                    <div class="col-md-4">
-                        <div class='white-paper-entry'>
-                            <div class='col-md-4'><img class='img-responsive' src="assets/img/client_logos/pugent-sound-business-logo.png" alt="..."></div>
-                            <div class='col-md-8'>
-                                <h4><small>2014</small></h4>
-                                <h4>100 Fastest Growing Private Companies</h4>
-                                <p>Pugent Sound Business Journal</p>
-                                <a href='http://www.bizjournals.com/seattle/blog/health-care-inc/2014/09/washingtons-fastest-growing-private-companies.html' target='blank'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
-                            </div>
-                        </div>
-                    </div>
                     <div class="col-md-4">
                         <div class='white-paper-entry'>
                             <div class='col-md-4'><img class='img-responsive' src="assets/img/client_logos/eastside-fastest-growing-logo.png" alt="..."></div>
                             <div class='col-md-8'>
                                 <h4><small>2014</small></h4>
-                                <h4>Eastside Fastest Growing Companies</h4>
+                                <h4>Eastside Fastest Growing Private Companies</h4>
                                 <p>Pugent Sound Business Journal</p>
                                 <a href='http://www.bizjournals.com/seattle/blog/2014/05/eastside-fastest-growing-private-companies.html' target='blank'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-4">
+                        <div class='white-paper-entry'>
+                            <div class='col-md-4'><img class='img-responsive' src="assets/img/client_logos/pugent-sound-business-logo.png" alt="..."></div>
+                            <div class='col-md-8'>
+                                <h4><small>2014</small></h4>
+                                <h4>100 Washington Fastest Growing Private Companies</h4>
+                                <p>Pugent Sound Business Journal</p>
+                                <a href='http://www.bizjournals.com/seattle/blog/health-care-inc/2014/09/washingtons-fastest-growing-private-companies.html' target='blank'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    
                     
                 </div>
                 <div class='row'>
