--- a/bpcs-v4/solutions.html
+++ b/bpcs-v4/solutions.html
@@ -256,7 +256,8 @@
                     </div>
                     <div class="col-md-4">
                         <div class='white-paper-entry'>
-                            <div class='col-md-4'><img class='img-responsive' src="assets/img/client_logos/eastside-fastest-growing-logo.png" alt="..."></div>
+                            <div class='col-md-4'><img class='img-responsive' src="assets/img/client_logos/eastside-fastest-growing-logo.png" alt="...">
+                            <img class='img-responsive' src="assets/img/ribbon.png" alt="..."></div>
                             <div class='col-md-8'>
                                 <h4><small>2014</small></h4>
                                 <h4>Eastside Fastest Growing Private Companies</h4>
