--- a/bpcs-v4/solutions.html
+++ b/bpcs-v4/solutions.html
@@ -236,13 +236,13 @@
                     </div>
                 </div>
             </div>
-            <div class='row'>
+            <!--<div class='row'>
                 <div class="col-md-4 text-center">
                     <img src='assets/img/client_logos/microsoft-partner-logo.png'>
                 </div>
                 <div class="col-md-4 text-center">
                 </div>
-            </div>
+            </div>-->
         </div>
     </section>
     <section id="callToAction" class='container-alt-accent'>
