--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -10,12 +10,8 @@
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
-    <title>Blueprint Consulting Services</title>
-    <!-- BOOTSTRAP STYLE SHEET -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
-    <!-- FONT AWESOME ICONS STYLE SHEET -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <!-- CUSTOM STYLES -->
     <link href="assets/css/style.css" rel="stylesheet" />
     <!-- HTML5 Shiv and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -195,6 +191,7 @@
     <!-- CUSTOM SCRIPTS   -->
     <script src="assets/js/custom.js"></script>
     <script src="assets/js/payboard.js"></script>
+    <script src="assets/js/googleanalytics.js"></script>
 </body>
 
 </html>
