--- a/bpcs-v4/solutions.html
+++ b/bpcs-v4/solutions.html
@@ -4,18 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>Welcome | Blueprint Consulting Services - Bellevue, Washington</title>
+    <title>Solutions | Blueprint Consulting Services - Bellevue, Washington</title>
     <meta name="description" content="Blueprint Consulting Services provides strategic consulting and end-to-end technical solutions. We are industry experts who plan strategically and deliver exceptional results.">
     <meta name="keywords" content="technology consulting bellevue, blue print bellevue, blue print consulting, blue print consulting bellevue, blueprint bellevue, consulting bellevue, technology consulting, Microsoft partner, Microsoft preferred supplier, microsoft vendor, Blueprint Consulting Services LLC, Bellevue WA technology consultants, technology consulting, business consulting, consulting, Blueprint Consulting, Blueprint Consulting Services, Blueprint, technical solutions, best industry talent, Office 365, SharePoint, cloud, collaboration, application development, customer support, IT, digital marketing, consulting in Bellevue WA">
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
-    <title>Blueprint Consulting Services</title>
-    <!-- BOOTSTRAP STYLE SHEET -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
-    <!-- FONT AWESOME ICONS STYLE SHEET -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <!-- CUSTOM STYLES -->
     <link href="assets/css/style.css" rel="stylesheet" />
     <!-- HTML5 Shiv and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -307,6 +303,7 @@
     <!-- CUSTOM SCRIPTS   -->
     <script src="assets/js/custom.js"></script>
     <script src="assets/js/payboard.js"></script>
+    <script src="assets/js/googleanalytics.js"></script>
 </body>
 
 </html>
