--- a/bpcs-v4/solutions.html
+++ b/bpcs-v4/solutions.html
@@ -232,13 +232,14 @@
                     </div>
                 </div>
             </div>
-            <!--<div class='row'>
+            <div class='row'>
                 <div class="col-md-4 text-center">
                     <img src='assets/img/client_logos/microsoft-partner-logo.png'>
                 </div>
                 <div class="col-md-4 text-center">
+                    <img src='assets/img/mpsp_logo_web.jpg'>
                 </div>
-            </div>-->
+            </div>
         </div>
     </section>
     <section id="callToAction" class='container-alt-accent'>
