--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -58,6 +58,9 @@
                         <div class='col-md-6 col-md-offset-3'>
                             <button onClick="location.href='solutions.html'" class="btn btn-callToAction btn-block">See our solutions</button>
                         </div>
+                        
+                            <img class='hero-award' src="assets/img/awards/fastest_growing_2015_white.png" alt="...">
+                        
                         <div class='arrow bounce'>
                         </div>
                     </div>
