--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -22,6 +22,9 @@
 </head>
 
 <body>
+    <div class='hero-ribbon'>
+        <img src="assets/img/awards/hero-ribbon.png" alt="" class="img-responsive" />
+    </div>
     <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
