added award linking

--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <div class='hero-ribbon'>
+    <div class='hero-ribbon awardLink'>
         <img src="assets/img/awards/hero-ribbon.png" alt="" class="img-responsive" />
     </div>
     <div class="navbar navbar-default navbar-fixed-top">
@@ -61,9 +61,7 @@
                         <div class='col-md-6 col-md-offset-3'>
                             <button onClick="location.href='solutions.html'" class="btn btn-callToAction btn-block">See our solutions</button>
                         </div>
-                        <a href='solutions.html#recognition'>
-                            <img class='hero-award' src="assets/img/awards/fastest_growing_2015_white.png" alt="...">
-                        </a>
+                            <img class='awardLink hero-award' src="assets/img/awards/fastest_growing_2015_white.png" alt="...">
                         <div class='arrow bounce'>
                         </div>
                     </div>
