--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -58,10 +58,11 @@
                     </div>
                     <p class="p-cls"></p>
                     <div class="row text-center">
+                        <img class='awardLink hero-award' src="assets/img/awards/fastest_growing_2015_white.png" alt=".Blueprint wins Eastside's Fastest Growing Company of 2015 award">
                         <div class='col-md-6 col-md-offset-3'>
                             <button onClick="location.href='solutions.html'" class="btn btn-callToAction btn-block">See our solutions</button>
                         </div>
-                            <img class='awardLink hero-award' src="assets/img/awards/fastest_growing_2015_white.png" alt="...">
+                            
                         <div class='arrow bounce'>
                         </div>
                     </div>
