--- a/bpcs-v4/solutions.html
+++ b/bpcs-v4/solutions.html
@@ -208,7 +208,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class='white-paper-entry'>
-                        <a href='http://www.bizjournals.com/seattle/blog/techflash/2015/06/eastsides-fastest-growing-revenue-soared-for-these.html#g9' target='blank'><img class='img-responsive' src="assets/img/awards/fastest_growing_2015.png" alt="..."></a>
+                        <a href='http://www.bizjournals.com/seattle/morning_call/2015/07/blueprint-consulting-services-earned-eastside.html' target='blank'><img class='img-responsive' src="assets/img/awards/fastest_growing_2015.png" alt="..."></a>
                     </div>
                 </div>
                 <div class="col-md-4">
