--- a/bpcs-v4/solutions.html
+++ b/bpcs-v4/solutions.html
@@ -232,6 +232,13 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class='white-paper-entry'>
+                        <a href='#' target='blank'><img class='img-responsive' src="assets/img/awards/2015_waste_prevention.png" alt="..."></a>
+                    </div>
+                </div>
+            </div>
             <div class='row'>
                 <div class="col-md-4 text-center">
                     <img src='assets/img/client_logos/microsoft-partner-logo.png'>
